--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-light">
-                    <h1>Isang Kaibigan ang kwento ng mahiwagang 10M.</h1>
-                    <p>Launched in November 2023, “Isang Kaibigan” is a 16-page picture book that tells the story of
-                        friendship between an owl and a parrot. The owl helps the parrot rebuild its nest after it is
-                        damaged by a storm.
+                    <h1>That Time I Got Reincarnated as a Slime</h1>
+                    <p>That Time I Got Reincarnated as a Slime, also known as Regarding Reincarnated to Slime and by the
+                        contraction TenSura, is a Japanese fantasy light novel series written by Fuse, and illustrated
+                        by Mitz Vah.
                     </p>
                     <a href="#about" class="btn btn-brand">Please Click Here!</a>
                 </div>
@@ -72,7 +72,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6">
-                    <img src="titodugs.webp" alt="">
+                    <img src="portrait1.jpg" alt="">
                 </div>
                 <div class="col-lg-6 text-light">
                     <h2>ABOUT</h2>
@@ -126,6 +126,23 @@
             </div>
         </div>
     </section>
+
+      <!--CTA-->
+    <div id="cta" class="d-flex align-items-center">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-light">
+                    <h1>That Time I Got Reincarnated as a Slime</h1>
+                    <p>That Time I Got Reincarnated as a Slime, also known as Regarding Reincarnated to Slime and by the
+                        contraction TenSura, is a Japanese fantasy light novel series written by Fuse, and illustrated
+                        by Mitz Vah.
+                    </p>
+                    <a href="#about" class="btn btn-brand">Please Click Here!</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
