--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div class="row">
                 <div class="col-lg-4 d-flex align-items-center justify-content-center">
                     <div class="card text-center py-3" style="width: 18rem;">
-                        <img src="duts.webp" class="card-img-top eyy mx-auto" alt="...">
+                        <img src="shh.jpg" class="card-img-top eyy mx-auto" alt="...">
                         <div class="card-body">
                             <h5 class="card-title"> Card title</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -105,7 +105,7 @@
                 </div>
                 <div class="col-lg-4 d-flex align-items-center justify-content-center">
                     <div class="card text-center py-3" style="width: 18rem;">
-                        <img src="duts.webp" class="card-img-top eyy mx-auto" alt="...">
+                        <img src="shh.jpg" class="card-img-top eyy mx-auto" alt="...">
                         <div class="card-body">
                             <h5 class="card-title"> Card title</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -115,7 +115,7 @@
                 </div>
                 <div class="col-lg-4 d-flex align-items-center justify-content-center">
                     <div class="card text-center py-3" style="width: 18rem;">
-                        <img src="duts.webp" class="card-img-top eyy mx-auto" alt="...">
+                        <img src="shh.jpg" class="card-img-top eyy mx-auto" alt="...">
                         <div class="card-body">
                             <h5 class="card-title"> Card title</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -142,6 +142,33 @@
             </div>
         </div>
     </div>
+
+    <!--REVIEWS-->
+    <section id="review">
+        <div class="container">
+            <div class="text-center">
+                <h2>REVIEWS</h2>
+                <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, dolorum?
+                </P>
+            </div>
+            <!-- items -->
+            <div class="row">
+                <div class="col">
+                    <div class="testimonials">
+                        <div class="d-flex">
+                            <img src="avatar.jpg" alt="">
+                            <div class="">
+                                <h3>Client Name</h3>
+                                <a href="">@client</a>
+                            </div>
+                        </div>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
 </body>
 
