--- a/index.html
+++ b/index.html
@@ -152,14 +152,74 @@
                 </P>
             </div>
             <!-- items -->
-            <div class="row">
+            <div class="row row-cols-lg-3">
                 <div class="col">
-                    <div class="testimonials">
+                    <div class="testimonials mt-4">
                         <div class="d-flex">
                             <img src="avatar.jpg" alt="">
-                            <div class="">
+                            <div class="ms-2 mb-2">
                                 <h3>Client Name</h3>
-                                <a href="">@client</a>
+                                <a href="" class="text-decoration-none">@client</a>
+                            </div>
+                        </div>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="testimonials mt-4">
+                        <div class="d-flex">
+                            <img src="avatar.jpg" alt="">
+                            <div class="ms-2 mb-2">
+                                <h3>Client Name</h3>
+                                <a href="" class="text-decoration-none">@client</a>
+                            </div>
+                        </div>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="testimonials mt-4">
+                        <div class="d-flex">
+                            <img src="avatar.jpg" alt="">
+                            <div class="ms-2 mb-2">
+                                <h3>Client Name</h3>
+                                <a href="" class="text-decoration-none">@client</a>
+                            </div>
+                        </div>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="testimonials mt-4">
+                        <div class="d-flex">
+                            <img src="avatar.jpg" alt="">
+                            <div class="ms-2 mb-2">
+                                <h3>Client Name</h3>
+                                <a href="" class="text-decoration-none">@client</a>
+                            </div>
+                        </div>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="testimonials mt-4">
+                        <div class="d-flex">
+                            <img src="avatar.jpg" alt="">
+                            <div class="ms-2 mb-2">
+                                <h3>Client Name</h3>
+                                <a href="" class="text-decoration-none">@client</a>
+                            </div>
+                        </div>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="testimonials mt-4">
+                        <div class="d-flex">
+                            <img src="avatar.jpg" alt="">
+                            <div class="ms-2 mb-2">
+                                <h3>Client Name</h3>
+                                <a href="" class="text-decoration-none">@client</a>
                             </div>
                         </div>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
