--- a/index.html
+++ b/index.html
@@ -76,10 +76,8 @@
                 </div>
                 <div class="col-lg-6 text-light">
                     <h2>ABOUT</h2>
-                    <h3>Duterte believes Quiboloy no longer in Davao</h3>
-                    <h4>Asked about the whereabouts of Quiboloy, Duterte joked that he is already in heaven.
-                        <br>
-                        "One guess kung nasaan si Pastor Quiboloy? Nasa langit na siya," she said.
+                    <h3>"Great Demon Lord" Rimuru Tempest</h3>
+                    <h4>"Dai Maō" Rimuru Tenpesuto, formerly known as Satoru Mikami, is the titular main protagonist of That Time I Got Reincarnated as a Slime.
                     </h4>
                     <a href="#services" class="btn btn-brand">Please Click Here!</a>
                 </div>
